feat: harden native lowering and attacker validation
Replace stable metadata/token recovery surfaces with build-scoped localized plans, strengthen JVM exception and field semantics, diversify wrapper and registration layouts, and add attacker-oriented coverage and artifact audits.